--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     padding: 20px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -28,7 +28,7 @@ html, body {
 
 #date {
     font-size: 1.75rem;
-    margin-top: -10px;
+    margin-top: -20px;
     margin-left: 10px;
     opacity: .9;
 }
